--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -147,10 +147,38 @@ aside {
 	}
 }
 
-.gravatar {
-	float: left;
-	margin-right: 10px;
+.stats {
+	overflow: auto;
+	a {
+		float: left;
+		padding: 0 10px;
+		border-left: 1px solid $grayLighter;
+		color: gray;
+
+		&:first-child {
+			padding-left: 0;
+			border: 0;
+		}
+
+		&:hover {
+		text-decoration: none;
+		color: $blue;
+		}
+	}
+
+	strong {
+		display: block;
+	}
 }
+
+.user_avatars {
+	overflow: auto;
+	margin-top: 10px;
+	.gravatar {
+		margin: 1px 1px;
+	}
+}
+
 
 
 /* forms */
@@ -201,7 +229,7 @@ input, textare, select, .uneditable-input {
 	margin: 10px 0 0 0;
 
 	li {
-		padding: 10px 0;
+		padding: 30px 0;
 		border-top: 1px solid #e8e8e8;
 	}
 }
